tests/NormalTests/paczka1/fuzzy1/68560800.err
Error in line 6: Z5mEH8D1 A511 20,0
Error in line 15: ZYCk A963 27,9
Error in line 35: 3QUgnU0B S722 87,07
Error in line 27: S296 A963 67,3
Error in line 36: S296 A511 34,9
